# AD

./: .env  ActivateUsers.ps1  Test-ChangeUserPasswordsAndStatus.Tests.ps1  ad_functions.py  createOU_USR.py  lastLogon.py  pyproject.toml  readme.md  requirements.txt  test_ad_functions.py  test_lastLogon.py  users.csv
